# racanim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/headers/: BSplineApproximateCurve.h  BezierCurve.h  InstancedObjectDecorator.h  Lines.h  MyGLM.h  ResourceManager.h  Transform.h  TraversableSpline.h  TriangleMesh.h
lab1/resources/: plane.mtl
lab1/resources/cube/: cube.mtl
lab1/shaders/: light-const.geom  light-gouraud.vert  light-phong-tex.vert
lab1/sources/: BezierCurve.cpp  Camera.cpp  FPSManager.cpp  InputManager.cpp  Light.cpp  Lines.cpp  Object.cpp  ResourceManager.cpp  Transform.cpp  TriangleMesh.cpp
lab2/: CMakeLists.txt
lab2/headers/: BezierManagerDecorator.h  IRenderable.h  ISceneObject.h  Material.h  Object.h  PhysicsEngine.h  PhysicsObject.h
lab2/resources/: sphere.mtl
lab2/resources/glava/: glava.mtl
lab2/shaders/: light-phong.frag
lab2/sources/: BSplineApproximateCurve.cpp  Cloth.cpp  Main.cpp  Object.cpp  Renderer.cpp
lab3/: .clangd  CMakeLists.txt
lab3/headers/: BezierCurve.h  IRenderable.h  ISceneObject.h  ISpline.h  Lines.h  Object.h  PhysicsInputDecorator.h  PhysicsObject.h  Renderer.h  ResourceManager.h  TraversableSpline.h
lab3/shaders/: animated.vert  cloth.frag  depth.vert  light-phong-tex.vert  wire.vert
lab3/sources/: Light.cpp  Main.cpp  MyGLM.cpp  PhysicsInputDecorator.cpp  PhysicsObject.cpp  Renderer.cpp  ResourceManager.cpp
racanim/: CMakeLists.txt
racanim/headers/: AnimatedModel.h  BSplineApproximateCurve.h  Camera.h  FPSManager.h  IMoveable.h  IMoveableTransform.h  IRenderable.h  ISceneObject.h  InputManager.h  Light.h  Object.h  Renderer.h  Shader.h  TriangleMesh.h
racanim/resources/: plane.mtl
racanim/shaders/: animated-depth.vert  animated.frag  cloth.geom  cloth.vert  light-phong-tex.frag  light-phong.frag  light-phong.vert
racanim/sources/: AnimatedModel.cpp  BSplineApproximateCurve.cpp  BezierManagerDecorator.cpp  InstancedObjectDecorator.cpp  Lines.cpp  Main.cpp  Material.cpp  MyGLM.cpp  Object.cpp  Renderer.cpp  Shader.cpp  Transform.cpp  TraverableSpline.cpp  TriangleMesh.cpp
